Alignment corrections - news detail and homepage

--- a/wp-content/themes/aviation/scss/_header.scss
+++ b/wp-content/themes/aviation/scss/_header.scss
@@ -14,13 +14,16 @@ header.site-header {
         padding: 60px 20px 20px !important;
     }
     @media all and (max-width: 909px) {
-        padding: 40px 40px 20px !important;
+        padding: 40px 20px 20px !important;
     }
     .site-header-main {
         max-width: 1290px;
         margin: 0 auto;
         @media all and (max-width: 1330px) {
             padding: 0 20px;
+        }
+        @media all and (max-width: 909px) {
+            padding: 0;
         }
         .site-branding {
             a {
@@ -146,7 +149,7 @@ body:not(.home) {
         padding: 30px 0 30px 0 !important;
         box-shadow: 0 4px 20px -1px #0000006e;
         @media all and (max-width: 909px) {
-            padding: 20px 0 20px 0 !important;
+            padding: 20px !important;
         }
         &.fixed {
             padding-top: 10px !important;
