--- a/wp-content/themes/aviation/scss/_news-inner.scss
+++ b/wp-content/themes/aviation/scss/_news-inner.scss
@@ -13,16 +13,19 @@
                     text-align: left;
                     padding: 40px 0px;
                     @media all and (max-width: 1330px) {
-                        padding: 40px 20px;
+                        padding: 40px 0px;
                     }
                     @media all and (max-width: 991px) {
-                        padding: 30px 20px;
+                        padding: 30px 0px;
                         font-size: 40px;
                     }
                     @media all and (max-width: 768px) {
-                        padding: 20px 20px;
+                        padding: 20px 0px;
                         font-size: 35px;
                     }
+                }
+                .news-bottom {
+                    padding: 0;
                 }
                 .loadmore-btn {
                     button {
@@ -38,7 +41,6 @@
                         font-weight: normal;
                         @media all and (max-width: 500px) {
                             padding: 15px 55px;
-                         
                         }
                     }
                 }
